Re: #2556 (Metis) rm whitespace / made email not editable / prevent page jump on edit toggle

--- a/source/sass/pandora/user_profile.scss
+++ b/source/sass/pandora/user_profile.scss
@@ -46,7 +46,7 @@
     padding: 0 8px;
   }
 
-  .flex-outer > div:not(:last-child) {
+  .flex-outer > div:not(.buttons) {
     margin-bottom: 20px;
   }
 
